# nusawave.github.io

./: .gitignore  README.md  index.html  package-lock.json  package.json  render.yaml  vite.config.js
.github/workflows/: deploy.yml
assets/: index-Dz7RS4WD.js
backend/: Cargo.toml
backend/src/: lib.rs  main.rs
backend/src/models/: contact.rs
backend/src/routes/: contact.rs  messages.rs  mod.rs  root.rs
backend/src/utils/: logger.rs
src/: App.vue  main.js
src/blog/: harnessing-ocean-data-with-ai.md  offshore-wind-forecasting.md  open-data-coastal-management.md  satellite-data-integration.md
src/components/: About.vue  Blog.vue  BlogList.vue  BlogPost.vue  Contact.vue  Footer.vue  Header.vue  Hero.vue  Home.vue  Outreach.vue  Services.vue
