[package]
name = "nusawave-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.11.0"
actix-cors = "0.7.1"
tokio = { version = "1.48.0", features = ["full"] }
env_logger = "0.11.8"
log = "0.4"
dotenvy = "0.15"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
chrono = { version = "0.4.42", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.68"

[lib]
name = "nusawave_backend"
path = "src/lib.rs"